# fluid-ai-2

./: .flake8  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  mac_debug.yaml  test_pinn.yaml
gaussian_splatting/: __init__.py  dataset.py  losses.py  model.py  renderer.py  train.py
integration/: __init__.py  advection.py  forward_predict.py  novel_view.py
pinn/: __init__.py  boundary.py  model.py  navier_stokes.py  train.py
preprocessing/: __init__.py  extract_depth.py  extract_flow.py  normalize_fps.py  normalize_intrinsics.py  run_colmap.py  run_pipeline.py  stabilize.py  sync_videos.py
scripts/: check_env.py  setup_env.sh
tests/: test_boundary.py  test_dataset.py  test_extract_depth.py  test_extract_flow.py  test_integration.py  test_losses.py  test_model.py  test_navier_stokes.py  test_normalize_intrinsics.py  test_pinn_model.py  test_pinn_train.py  test_renderer.py  test_train.py
